tests/snapshots/output_contract__output_basic.snap
---
source: tests/output_contract.rs
expression: out
---
{
  "name": "test_process",
  "location": {
    "file": "src/main.rs",
    "line": 80,
    "column": 4
  }
}
