tests/snapshots/output_contract__ref_output_minimal.snap
---
source: tests/output_contract.rs
expression: out
---
{
  "total": 0,
  "test": 0,
  "prod": 0
}
