tests/snapshots/output_contract__server_status_output_with_install_hint.snap
---
source: tests/output_contract.rs
expression: out
---
{
  "language": "rust",
  "status": "missing",
  "error": "not installed",
  "install_hint": "rustup component add rust-analyzer"
}
