tests/snapshots/output_contract__target_output_fallback_for_unknown_symbol.snap
---
source: tests/output_contract.rs
assertion_line: 263
expression: out
---
{
  "name": "symbol@50:4",
  "kind": "unknown",
  "file": "src/main.rs",
  "line": 50,
  "resolved": false
}
